# mc-server-manager

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs
src/config/: mod.rs
src/daemon/: basic_log.rs  event.rs  mod.rs  paper.rs
src/ipc/: install.rs  mod.rs  update.rs
src/ipc/install/: iops.rs
src/repo/: mod.rs  paper.rs
