[package]
name = "mcman"
version = "0.1.0"
authors = ["Felix Resch <resch.felix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-channel = "0.14.1"
serde = "1.0.118"
serde_derive = "1.0.118"
clap = "2.33.3"
semver = { version = "0.9.0", features = ["serde"]}
term-table = "1.3.0"