[package]
name = "mcman"
version = "0.1.0"
authors = ["Felix Resch <resch.felix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-channel = "0.14.1"
serde = "1.0.118"
serde_derive = "1.0.118"
clap = "2.33.3"
semver = { version = "0.9.0", features = ["serde"]}
term-table = "1.3.0"
toml = "0.5.8"
serde_json = "1.0.60"
interprocess = "1.0.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
indicatif = "0.15.0"
chrono = "0.4.19"
libc = "0.2.81"
walkdir = "2.3.1"
reqwest = { version = "0.11.0", features = ["blocking", "json"]}
regex = "1.4.3"
lenient_semver = "0.3.0"